# openenv-mobile-ui

./: Dockerfile  README.md  baseline.py  env.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  env.py
